--- a/10xCards/Components/App.razor
+++ b/10xCards/Components/App.razor
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="utf-8" />
@@ -15,6 +15,8 @@
 
 <body>
     <Routes @rendermode="InteractiveServer" />
+    <script src="js/auth.js"></script>
+    <script src="js/accessibility.js"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
